@@ -147,6 +147,7 @@ TH = Teluhiko Hilano
 TP = Thomas Papanikolaou
 VB = Vasili Burdo
 VBr= Volker Braun
+VD = Vincent Delecroix
 VL = Vincent Lefevre
 XR = Xavier Roblot
 YU = Yoshiaki Uchikawa
