@@ -1,0 +1,165 @@
+Vecsmall([1])
+Vecsmall([1, 2, 3, 4])
+Vecsmall([1, 2, 4, 3])
+Vecsmall([1, 3, 2, 4])
+Vecsmall([1, 3, 4, 2])
+Vecsmall([1, 4, 2, 3])
+Vecsmall([1, 4, 3, 2])
+Vecsmall([2, 1, 3, 4])
+Vecsmall([2, 1, 4, 3])
+Vecsmall([2, 3, 1, 4])
+Vecsmall([2, 3, 4, 1])
+Vecsmall([2, 4, 1, 3])
+Vecsmall([2, 4, 3, 1])
+Vecsmall([3, 1, 2, 4])
+Vecsmall([3, 1, 4, 2])
+Vecsmall([3, 2, 1, 4])
+Vecsmall([3, 2, 4, 1])
+Vecsmall([3, 4, 1, 2])
+Vecsmall([3, 4, 2, 1])
+Vecsmall([4, 1, 2, 3])
+Vecsmall([4, 1, 3, 2])
+Vecsmall([4, 2, 1, 3])
+Vecsmall([4, 2, 3, 1])
+Vecsmall([4, 3, 1, 2])
+Vecsmall([4, 3, 2, 1])
+Vecsmall([1, 1, 1, 3])
+Vecsmall([1, 1, 3, 1])
+Vecsmall([1, 3, 1, 1])
+Vecsmall([3, 1, 1, 1])
+Vecsmall([1, 2, 1, 3, 1, 4])
+Vecsmall([1, 2, 1, 3, 4, 1])
+Vecsmall([1, 2, 1, 4, 1, 3])
+Vecsmall([1, 2, 1, 4, 3, 1])
+Vecsmall([1, 2, 3, 1, 1, 4])
+Vecsmall([1, 2, 3, 1, 4, 1])
+Vecsmall([1, 2, 3, 4, 1, 1])
+Vecsmall([1, 2, 4, 1, 1, 3])
+Vecsmall([1, 2, 4, 1, 3, 1])
+Vecsmall([1, 2, 4, 3, 1, 1])
+Vecsmall([1, 3, 1, 1, 2, 4])
+Vecsmall([1, 3, 1, 1, 4, 2])
+Vecsmall([1, 3, 1, 2, 1, 4])
+Vecsmall([1, 3, 1, 2, 4, 1])
+Vecsmall([1, 3, 1, 4, 1, 2])
+Vecsmall([1, 3, 1, 4, 2, 1])
+Vecsmall([1, 3, 2, 1, 1, 4])
+Vecsmall([1, 3, 2, 1, 4, 1])
+Vecsmall([1, 3, 2, 4, 1, 1])
+Vecsmall([1, 3, 4, 1, 1, 2])
+Vecsmall([1, 3, 4, 1, 2, 1])
+Vecsmall([1, 3, 4, 2, 1, 1])
+Vecsmall([1, 4, 1, 1, 2, 3])
+Vecsmall([1, 4, 1, 1, 3, 2])
+Vecsmall([1, 4, 1, 2, 1, 3])
+Vecsmall([1, 4, 1, 2, 3, 1])
+Vecsmall([1, 4, 1, 3, 1, 2])
+Vecsmall([1, 4, 1, 3, 2, 1])
+Vecsmall([1, 4, 2, 1, 1, 3])
+Vecsmall([1, 4, 2, 1, 3, 1])
+Vecsmall([1, 4, 2, 3, 1, 1])
+Vecsmall([1, 4, 3, 1, 1, 2])
+Vecsmall([1, 4, 3, 1, 2, 1])
+Vecsmall([1, 4, 3, 2, 1, 1])
+Vecsmall([2, 1, 1, 1, 3, 4])
+Vecsmall([2, 1, 1, 1, 4, 3])
+Vecsmall([2, 1, 1, 3, 1, 4])
+Vecsmall([2, 1, 1, 3, 4, 1])
+Vecsmall([2, 1, 1, 4, 1, 3])
+Vecsmall([2, 1, 1, 4, 3, 1])
+Vecsmall([2, 1, 3, 1, 1, 4])
+Vecsmall([2, 1, 3, 1, 4, 1])
+Vecsmall([2, 1, 3, 4, 1, 1])
+Vecsmall([2, 1, 4, 1, 1, 3])
+Vecsmall([2, 1, 4, 1, 3, 1])
+Vecsmall([2, 1, 4, 3, 1, 1])
+Vecsmall([2, 3, 1, 1, 1, 4])
+Vecsmall([2, 3, 1, 1, 4, 1])
+Vecsmall([2, 3, 1, 4, 1, 1])
+Vecsmall([2, 3, 4, 1, 1, 1])
+Vecsmall([2, 4, 1, 1, 1, 3])
+Vecsmall([2, 4, 1, 1, 3, 1])
+Vecsmall([2, 4, 1, 3, 1, 1])
+Vecsmall([2, 4, 3, 1, 1, 1])
+Vecsmall([3, 1, 1, 1, 2, 4])
+Vecsmall([3, 1, 1, 1, 4, 2])
+Vecsmall([3, 1, 1, 2, 1, 4])
+Vecsmall([3, 1, 1, 2, 4, 1])
+Vecsmall([3, 1, 1, 4, 1, 2])
+Vecsmall([3, 1, 1, 4, 2, 1])
+Vecsmall([3, 1, 2, 1, 1, 4])
+Vecsmall([3, 1, 2, 1, 4, 1])
+Vecsmall([3, 1, 2, 4, 1, 1])
+Vecsmall([3, 1, 4, 1, 1, 2])
+Vecsmall([3, 1, 4, 1, 2, 1])
+Vecsmall([3, 1, 4, 2, 1, 1])
+Vecsmall([3, 2, 1, 1, 1, 4])
+Vecsmall([3, 2, 1, 1, 4, 1])
+Vecsmall([3, 2, 1, 4, 1, 1])
+Vecsmall([3, 2, 4, 1, 1, 1])
+Vecsmall([3, 4, 1, 1, 1, 2])
+Vecsmall([3, 4, 1, 1, 2, 1])
+Vecsmall([3, 4, 1, 2, 1, 1])
+Vecsmall([3, 4, 2, 1, 1, 1])
+Vecsmall([4, 1, 1, 1, 2, 3])
+Vecsmall([4, 1, 1, 1, 3, 2])
+Vecsmall([4, 1, 1, 2, 1, 3])
+Vecsmall([4, 1, 1, 2, 3, 1])
+Vecsmall([4, 1, 1, 3, 1, 2])
+Vecsmall([4, 1, 1, 3, 2, 1])
+Vecsmall([4, 1, 2, 1, 1, 3])
+Vecsmall([4, 1, 2, 1, 3, 1])
+Vecsmall([4, 1, 2, 3, 1, 1])
+Vecsmall([4, 1, 3, 1, 1, 2])
+Vecsmall([4, 1, 3, 1, 2, 1])
+Vecsmall([4, 1, 3, 2, 1, 1])
+Vecsmall([4, 2, 1, 1, 1, 3])
+Vecsmall([4, 2, 1, 1, 3, 1])
+Vecsmall([4, 2, 1, 3, 1, 1])
+Vecsmall([4, 2, 3, 1, 1, 1])
+Vecsmall([4, 3, 1, 1, 1, 2])
+Vecsmall([4, 3, 1, 1, 2, 1])
+Vecsmall([4, 3, 1, 2, 1, 1])
+Vecsmall([4, 3, 2, 1, 1, 1])
+Vecsmall([1, 2, 3, 2, 3])
+Vecsmall([1, 2, 3, 3, 2])
+Vecsmall([1, 3, 2, 2, 3])
+Vecsmall([1, 3, 2, 3, 2])
+Vecsmall([1, 3, 3, 2, 2])
+Vecsmall([2, 1, 2, 3, 3])
+Vecsmall([2, 1, 3, 2, 3])
+Vecsmall([2, 1, 3, 3, 2])
+Vecsmall([2, 2, 1, 3, 3])
+Vecsmall([2, 2, 3, 1, 3])
+Vecsmall([2, 2, 3, 3, 1])
+Vecsmall([2, 3, 1, 2, 3])
+Vecsmall([2, 3, 1, 3, 2])
+Vecsmall([2, 3, 2, 1, 3])
+Vecsmall([2, 3, 2, 3, 1])
+Vecsmall([2, 3, 3, 1, 2])
+Vecsmall([2, 3, 3, 2, 1])
+Vecsmall([3, 1, 2, 2, 3])
+Vecsmall([3, 1, 2, 3, 2])
+Vecsmall([3, 1, 3, 2, 2])
+Vecsmall([3, 2, 1, 2, 3])
+Vecsmall([3, 2, 1, 3, 2])
+Vecsmall([3, 2, 2, 1, 3])
+Vecsmall([3, 2, 2, 3, 1])
+Vecsmall([3, 2, 3, 1, 2])
+Vecsmall([3, 2, 3, 2, 1])
+Vecsmall([3, 3, 1, 2, 2])
+Vecsmall([3, 3, 2, 1, 2])
+Vecsmall([3, 3, 2, 2, 1])
+Vecsmall([])
+Vecsmall([])
+Vecsmall([])
+Vecsmall([1])
+  ***   variable name expected: forperm(p,3,)
+  ***                                     ^---
+  ***   at top-level: forperm(1.0,q,)
+  ***                 ^---------------
+  ***   incorrect type in forperm (t_REAL).
+  ***   at top-level: forperm(-1,q,)
+  ***                 ^--------------
+  ***   domain error in forperm: a < 0
+Total time spent: 0
