@@ -58,6 +58,7 @@ CG   17- new GP function matpermanent [#1860]
          an arbitrary growth rate a_n = O(n^(k_1 + eps))
 BA   20- new GP function vecprod
      21- new GP function znchar
+VD   22- new GP function forperm
 
   Changed
       1- rewrite bnfnarrow
